--- a/index.css
+++ b/index.css
@@ -11,11 +11,11 @@ body {
 
 body {
     display: inline-block;
-    background-color: red;
+    background-color: lightblue;
 }
 
 .text {
-  width: 30%;
+  width: 100%;
   height: 100%;
-  margin-left: 10%;
+  margin-left: 20%;
 }
