--- a/index.css
+++ b/index.css
@@ -19,3 +19,12 @@ body {
   height: 100%;
   margin-left: 20%;
 }
+
+.content {
+  width: 100%;
+  height: 100%;
+  margin-left: 5%;
+  background-color: blue;
+  font-size: 1em;
+  font-family: sans-serif;
+}
