--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body {
 body {
     display: inline-block;
     background-color: lightpink;
+
 }
 
 .text {
@@ -20,11 +21,12 @@ body {
   margin-left: 20%;
 }
 
-.content {
+.key {
   width: 100%;
   height: 100%;
   margin-left: 5%;
-  background-color: blue;
   font-size: 1em;
   font-family: sans-serif;
+  color: blue;
+  display: inline-block;
 }
