--- a/index.css
+++ b/index.css
@@ -14,20 +14,78 @@ body {
 
 }
 
-.adaski {
+.container {
+  display: inline-inline-block;
+  width: 20%;
+  margin-left: 0%;
+  margin-top: 0%;
+  z-index: 4;
+  font-size: 3em;
+  font-family: Adieu;
+  color: black;
+}
+
+.book1 {
+  display: inline-inline-block;
+  width: 20%;
+  margin-left: 0%;
+  margin-top: 0%;
+  z-index: 2;
+}
+
+.book1 img{
+  display: inline-block;
+  width: 100%;
+  margin-left: 0%;
+  margin-top: 0%;
+}
+
+
+.readbooks {
   float: none;
   display: inline-block;
   text-align: left;
+  width: 100%;
+  height: 100%;
+  margin-left: 45%;
+  margin-top: 2%;
+  font-size: 5em;
+  font-family: Adieu;
+  color: yellow;
+  -webkit-text-stroke: 2px black;
+  z-index: 1;
+
+}
+
+.faster {
+  float: none;
+  display: inline-block;
+  text-align: left;
+  width: 100%;
+  height: 100%;
+  margin-left: 45%;
+  margin-top: -2%;
+  font-size: 8em;
+  font-family: Adieu;
+  color: yellow;
+  -webkit-text-stroke: 2px black;
+  z-index: 1;
+
+}
+
+.adaski {
+  display: fixed;
+  text-align: right;
   /* width: 3%;
   height: 100%; */
   width: 30px;
   height: 40px;
   /* width: 2%;
   height: 2%; */
-  margin-left: 40%;
-  margin-top: 50%;
-  font-size: 1em;
-  font-family: Bagnard;
+  margin-left: 45%;
+  margin-top: 1%;
+  font-size: 3em;
+  font-family: Adieu;
   color: black;
   /* animation-name: colorchange;
   animation-duration: 6s;
