--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ html,
 A {text-decoration: none;}
 body {
     height: 400%;
+    display:absolute;
 }
 
 * {
@@ -15,26 +16,30 @@ body {
 }
 
 .container {
-  display: inline-inline-block;
-  width: 20%;
-  margin-left: 0%;
-  margin-top: 0%;
+  display:absolute;
+  /* background-color: lightpink; */
+  padding: 15px;
+  width: 150px;
+  height: 220px;
+  margin-left: 70px;
+  margin-top: -310px;
   z-index: 4;
-  font-size: 3em;
+  font-size: 30px;
   font-family: Adieu;
   color: black;
+  z-index: 2;
 }
 
 .book1 {
-  display: inline-inline-block;
+  display:absolute;
   width: 20%;
   margin-left: 0%;
-  margin-top: 0%;
+  margin-top: 2%;
   z-index: 2;
 }
 
 .book1 img{
-  display: inline-block;
+  display:absolute;
   width: 100%;
   margin-left: 0%;
   margin-top: 0%;
@@ -43,7 +48,7 @@ body {
 
 .readbooks {
   float: none;
-  display: inline-block;
+  display:absolute;
   text-align: left;
   width: 100%;
   height: 100%;
@@ -59,7 +64,7 @@ body {
 
 .faster {
   float: none;
-  display: inline-block;
+  display:absolute;
   text-align: left;
   width: 100%;
   height: 100%;
@@ -74,7 +79,7 @@ body {
 }
 
 .adaski {
-  display: fixed;
+  display: absolute;
   text-align: right;
   /* width: 3%;
   height: 100%; */
@@ -83,8 +88,7 @@ body {
   /* width: 2%;
   height: 2%; */
   margin-left: 45%;
-  margin-top: 1%;
-  font-size: 3em;
+  font-size: 2.5em;
   font-family: Adieu;
   color: black;
   /* animation-name: colorchange;
