--- a/index.css
+++ b/index.css
@@ -2,7 +2,6 @@ html,
 A {text-decoration: none;}
 body {
     height: 400%;
-    display:absolute;
 }
 
 * {
@@ -16,13 +15,15 @@ body {
 }
 
 .container {
-  display:absolute;
+  position: absolute;
+  display: inline-block;
   /* background-color: lightpink; */
+  overflow-wrap: normal;
   padding: 15px;
-  width: 150px;
-  height: 220px;
-  margin-left: 70px;
-  margin-top: -310px;
+  width: 240px;
+  height: 350px;
+  margin-left: 130px;
+  margin-top: 155px;
   z-index: 4;
   font-size: 30px;
   font-family: Adieu;
@@ -31,66 +32,92 @@ body {
 }
 
 .book1 {
-  display:absolute;
+  position: absolute;
+  display: inline-block;
   width: 20%;
   margin-left: 0%;
-  margin-top: 2%;
+  margin-top: 6%;
   z-index: 2;
 }
 
 .book1 img{
-  display:absolute;
-  width: 100%;
-  margin-left: 0%;
-  margin-top: 0%;
+  position: absolute;
+  display: inline-block;
+  width: 170%;
 }
 
 
 .readbooks {
   float: none;
-  display:absolute;
-  text-align: left;
-  width: 100%;
+  position: absolute;
+  display: inline-block;
+  text-align: justify;
+  width: 700px;
   height: 100%;
-  margin-left: 45%;
+  margin-left: 60%;
   margin-top: 2%;
-  font-size: 5em;
+  font-size: 4em;
   font-family: Adieu;
   color: yellow;
-  -webkit-text-stroke: 2px black;
+  /* background-color: lightpink; */
+  -webkit-text-stroke: 5px black;
   z-index: 1;
 
 }
 
 .faster {
   float: none;
-  display:absolute;
-  text-align: left;
-  width: 100%;
+  position: absolute;
+  display: inline-block;
+  text-align: justify;
+  width: 700px;
   height: 100%;
-  margin-left: 45%;
-  margin-top: -2%;
-  font-size: 8em;
+  margin-left: 60%;
+  margin-top: 7%;
+  font-size: 7.4em;
   font-family: Adieu;
   color: yellow;
-  -webkit-text-stroke: 3px black;
+  /* background-color: lightpink; */
+  -webkit-text-stroke: 5px black;
   z-index: 1;
 
 }
 
+.button {
+  float: none;
+  position: absolute;
+  display: inline-block;
+  text-align: center;
+  width: 400px;
+  height: 50px;
+  margin-left: 2%;
+  margin-top: 2%;
+  font-size: 1em;
+  font-family: Adieu;
+  color: yellow;
+  background-color: black;
+}
+
+.video {
+  position: absolute;
+  display: inline-block;
+  width: 20px;
+  margin-left: 60.5%;
+  margin-top: 21%;
+}
+
+
 .adaski {
-  display: absolute;
-  text-align: right;
-  /* width: 3%;
-  height: 100%; */
-  width: 30px;
-  height: 40px;
-  /* width: 2%;
-  height: 2%; */
-  margin-left: 45%;
-  font-size: 2.5em;
+  text-align: center;
+  padding: 3px;
+  width: 200px;
+  height: 50px;
+  margin-left: 33%;
+  margin-top: 0.5%;
+  font-size: 2em;
   font-family: Adieu;
   color: black;
+  background-color: yellow;
   /* animation-name: colorchange;
   animation-duration: 6s;
   animation-iteration-count: infinite; */
@@ -104,55 +131,17 @@ body {
 @-webkit-keyframes colorchange {
   0% {
 
-    color: pink;
+    margin-left: 53%;
   }
 
-  10% {
-
-    color: #8e44ad;
-  }
-
-  20% {
-
-    color: #1abc9c;
-  }
-
-  30% {
-
-    color: #d35400;
-  }
-
-  40% {
-
-    color: blue;
-  }
 
   50% {
 
-    color: #34495e;
-  }
-
-  60% {
-
-    color: blue;
-  }
-
-  70% {
-
-    color: #2980b9;
-  }
-  80% {
-
-    color: #f1c40f;
-  }
-
-  90% {
-
-    color: #2980b9;
+    margin-left: 80%;
   }
 
   100% {
 
-    color: pink;
+    margin-left: 53%;
   }
 }
