--- a/index.css
+++ b/index.css
@@ -100,6 +100,8 @@ body {
 
 .video {
   position: absolute;
+  display: none;
+  visibility: hidden;
   display: inline-block;
   width: 20px;
   margin-left: 60.5%;
