--- a/index.css
+++ b/index.css
@@ -21,16 +21,16 @@ body {
   /* background-color: lightpink; */
   overflow-wrap: normal;
   padding: 15px;
-  width: 38%;
+  width: 60%;
   height: 350px;
-  margin-left: 0px;
+  margin-left: 5px;
   margin-top: 0px;
   z-index: 4;
-  font-size: 3em;
+  font-size: 5em;
   font-family: Taviraj;
   color: black;
   z-index: 2;
-  overflow-wrap: normal;
+  overflow-y: auto;
   line-height: 110%;
 }
 
@@ -40,17 +40,21 @@ body {
   /* background-color: lightblue; */
   overflow-wrap: normal;
   padding: 15px;
-  width: 38%;
-  height: 390px;
-  margin-left: 0px;
+  width: 60%;
+  height: 380px;
+  margin-left: 5px;
   margin-top: 355px;
   z-index: 4;
-  font-size: 13px;
+  font-size: 18px;
   font-family: Times;
   color: black;
   overflow-y: auto;
   overflow-x: hidden;
   z-index: 4;
+}
+
+.highlight {
+  background-color: yellow;
 }
 
 /* .book1 {
@@ -205,23 +209,24 @@ body {
 #links {
   position: absolute;
   /* left: calc(4% + 400px); top: 20px; */
-  margin-left: 42%;
-  margin-top: -20px;
-  width: 40%;
+  margin-left: 68%;
+  margin-top: 0px;
+  width: 30%;
   z-index: 10;
 }
 .adaski {
   text-align: center;
   padding: 3px;
   padding-top: 30px;
-  width: 80%;
+  width: 100%;
   height: 100px;
+  background-color: yellow;
+  /* clip-path: ellipse(190px 50px at 220px 70px); */
   /* margin-left: 33%; */
   margin-top: 4%;
   font-size: 3em;
   font-family: Taviraj;
   color: black;
-  background-color: yellow;
   text-transform: uppercase;
   z-index: 10;
 
@@ -231,7 +236,15 @@ body {
 
 }
 
+/* .backs img{
+  width: 100%;
+  height: 100%;
+  margin-left: -1%;
+  margin-top: -8.5%;
+  z-index: 20;
+} */
 
+/*
 .info {
   position: absolute;
   display: inline-block;
@@ -247,9 +260,9 @@ body {
   background-color: black;
   border-radius: 50%;
   z-index: 12;
-}
+} */
 
-.explanation {
+/* .explanation {
   position: fixed;
   display: none;
   margin-left: 30%;
@@ -258,7 +271,7 @@ body {
   width: 400px;
   background-color: yellow;
   z-index: 11;
-}
+} */
 
 .back {
   position: fixed;
